--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.1",
+    "html-react-parser": "^1.4.12",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-jsx-parser": "^1.29.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
